# cpp-tree-sitter

./: CMakeLists.txt  LICENSE  README.md
include/: cpp-tree-sitter.h
